--- a/Abschlussbericht/Abschlussbericht.tex
+++ b/Abschlussbericht/Abschlussbericht.tex
@@ -130,10 +130,10 @@ Insgesamt zeigt sich also, dass, wie zu erwarten, die häufigsten Argumentklasse
 \section{Retrospektive}
 Über den gesamten Projektverlauf hinweg hoben sich einige Aspekte immer wieder hervor.\\
 Die Aufgabe der semantischen Argumentklassifikation erwies sich, wie man an den Inhalten der Penn TreeBank sehen kann, als äußerst divers und sehr wichtig für die tiefere Verarbeitung der natürlichen Sprache. Das Annotationschema der PropBank zeigte, dass es ohne größere Schwierigkeiten auf diese verschiedensten semantischen Kontexte appliziert werden kann ohne an Allgemeinheit zu verlieren und somit sehr gut für diverse Machine Learning Methoden geeignet ist.\\
-Die Feature-Extraktion und anschließende -Selektion, bei der im Gegenzug versucht werden musste, den allgemeinen und somit auch teils vagen Argumentklassen der PropBank distinktive Features ohne Overfitting zuzuweisen, stellte sich, wie zu erwarten, als der komplexeste Teil des Projektes heraus. Das Path-Feature zeigt wahrscheinlich am deutlichsten, wie selbst nach einer Anpassung und Reduktion der Feature-Werte die Ergebnisse sich nur minimal oder gar nicht verbessern, obwohl es dem ersten Anschein nach eines der wichtigsten Feature zu sein schien, um insbesondere ähnliche Argumentklassen zu unterscheiden.\\
-Zuletzt zeigten sich bei den angewandten maschinellen Lernverfahren sowohl die Stärken und Schwächen bei der Verarbeitung von Datensätzen deren Features zahlreiche Werte annehmen. Die SVM, welche ursprünglich an \cite{Pradhan05supportvector} angelehnt, der wichtigste Algorithmus werden sollte, stellte sich (zumindest in den uns vorliegenden Umsetzungen für Weka) wegen Klassenanzahl und der hohen Anzahl an Feature-Werten als ungeeignet heraus. Eventuell hätte eine Balancierung der Daten gewünschte Ergebnisse erzielt. Dies setzt allerdings eine weitere Vorverarbeitung der Daten voraus, die sich von den anderen Algorithmen differenziert hätte.\\
-Die Ergebnisse Naïve Bayes sind hingegen wesentlich vielversprechender und zeigen, dass trotz der Einfachheit des Algorithmus unsere Feature distinktiv genug sind um ein F-Measure von rund 77\% zu erreichen. J48 benötigte zwar auf Grund der höheren Komplexität wesentlich mehr Berechnungsressourcen, stellte sich jedoch als signifikant präziser heraus. Dies lässt vermuten, dass das Zusammenspiel der Features wichtiger ist, als das jeweils einzeln betrachtete reine Maximum.\\
-Insgesamt ziehen wir also den Schluss, dass die Umsetzung der automatischen semantische Argumentklassifikation mittels Maschinenlernverfahren mit einem allgemein gehaltenen Annotationsschema und einem Algorithmus, der Feature als von einander abhängig betrachtet, bereits sehr zeigenswerte Ergebnisse erzielt werden können.
+Die Feature-Extraktion und anschließende -Selektion, bei der im Gegenzug versucht werden musste, den allgemeinen und somit auch teils vagen Argumentklassen der PropBank distinktive Features ohne Overfitting zuzuweisen, stellte sich, wie zu erwarten, als der komplexeste Teil des Projektes heraus.\\
+Zuletzt zeigten sich bei den angewandten maschinellen Lernverfahren die Stärken und Schwächen bei der Verarbeitung von Datensätzen deren Features zahlreiche Werte annehmen. Die SVM, welche ursprünglich an \cite{Pradhan05supportvector} angelehnt, der wichtigste Algorithmus werden sollte, stellte sich (zumindest in den uns vorliegenden Umsetzungen für Weka) wegen Klassenanzahl und der hohen Anzahl an Feature-Werten als ungeeignet heraus. Eventuell hätte eine Balancierung der Daten gewünschte Ergebnisse erzielt. Dies setzt allerdings eine weitere Vorverarbeitung der Daten voraus, die sich von den anderen Algorithmen differenziert hätte.\\
+Die Ergebnisse Naïve Bayes sind hingegen wesentlich vielversprechender und zeigen, dass trotz der Einfachheit des Algorithmus unsere Feature distinktiv genug sind um ein F-Measure von rund 0.77 zu erreichen. J48 benötigte zwar auf Grund der höheren Komplexität wesentlich mehr Berechnungsressourcen, stellte sich jedoch als signifikant präziser heraus. Dies lässt vermuten, dass das Zusammenspiel der Features wichtiger ist, als das jeweils einzeln betrachtete reine Maximum.\\
+Insgesamt ziehen wir also den Schluss, dass die Umsetzung der automatischen semantischen Argumentklassifikation mittels Maschinenlernverfahren mit einem allgemein gehaltenen Annotationsschema und einem Algorithmus, der Feature als von einander abhängig betrachtet, bereits sehr zeigenswerte Ergebnisse erzielt werden können.
 
 
 
